--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'spring-grpc-microservices-kubernetes'
-include 'api-gateway'
-include 'grpc-client'
-include 'grpc-server'
+rootProject.name = 'spring-microservices-multi-module'
+include 'gateway'
+include 'employee'
+include 'department'
